--- a/WeaveUI/src/weave/ui/DraggablePanel.mxml
+++ b/WeaveUI/src/weave/ui/DraggablePanel.mxml
@@ -217,13 +217,13 @@ along with Weave.  If not, see <http://www.gnu.org/licenses/>.
 				
 				minimizeButton.setStyle("downIcon", _minimizeDownIcon);
 				minimizeButton.setStyle("overIcon", _minimizeDownIcon);
-				setupControlButton(userControlButton, _userControlIcon, toggleControlPanel, "Click here to change settings for this component.");
-				setupControlButton(subMenuButton, _subMenuIcon, null, "Click here to open menu items for this component.");
-				setupControlButton(pinToBackButton, _pinToBackIcon, togglePinnedToBack, "Click here to pin this window to the back of the stage");
-				setupControlButton(pinButton, _pinIcon, togglePinned, "Click here to pin this window to the stage.") ;
-				setupControlButton(minimizeButton, _minimizeIcon, handleMinimizeButtonClick, "Click here to minimize this component.");
-				setupControlButton(maximizeButton, _maximizeIcon, toggleMaximized, "Click here to maximize or restore this component.");
-				setupControlButton(closePanelButton, null, handleCloseButtonClick, "Click here to close this component.");
+				setupControlButton(userControlButton, _userControlIcon, toggleControlPanel, lang("Click here to change settings for this component."));
+				setupControlButton(subMenuButton, _subMenuIcon, null, lang("Click here to open menu items for this component."));
+				setupControlButton(pinToBackButton, _pinToBackIcon, togglePinnedToBack, lang("Click here to pin this window to the back of the stage"));
+				setupControlButton(pinButton, _pinIcon, togglePinned, lang("Click here to pin this window to the stage.")) ;
+				setupControlButton(minimizeButton, _minimizeIcon, handleMinimizeButtonClick, lang("Click here to minimize this component."));
+				setupControlButton(maximizeButton, _maximizeIcon, toggleMaximized, lang("Click here to maximize or restore this component."));
+				setupControlButton(closePanelButton, null, handleCloseButtonClick, lang("Click here to close this component."));
 
 				closePanelButton.label = "X";
 				closePanelButton.setStyle("textRollOverColor", 0xFFFFFF);
@@ -245,7 +245,7 @@ along with Weave.  If not, see <http://www.gnu.org/licenses/>.
 					{
 						_controlPanel = registerDisposableChild(this, getChildAt(i) as ControlPanel);
 						removeChild(_controlPanel);
-						_controlPanel.title = "Settings for " + getQualifiedClassName(this).split("::")[1];
+						_controlPanel.title = lang("Settings for ") + getQualifiedClassName(this).split("::")[1];
 						break;
 					}
 				}
@@ -253,7 +253,7 @@ along with Weave.  If not, see <http://www.gnu.org/licenses/>.
 				if (!_controlPanel && EditorManager.getEditorClass(this))
 				{
 					_controlPanel = newDisposableChild(this, ControlPanel);
-					_controlPanel.title = "Settings for " + getQualifiedClassName(this).split("::")[1];
+					_controlPanel.title = lang("Settings for ") + getQualifiedClassName(this).split("::")[1];
 					
 					var editor:UIComponent = EditorManager.getNewEditor(this) as UIComponent;
 					
@@ -800,7 +800,7 @@ along with Weave.  If not, see <http://www.gnu.org/licenses/>.
 			private function handleCloseButtonClick():void
 			{
 				if (Weave.properties.showVisToolCloseDialog.value)
-					Alert.show("Are you sure you want to close this window?", "Closing this window...", 1|2, this, handleCloseAlertResult);
+					Alert.show(lang("Are you sure you want to close this window?"), lang("Closing this window..."), 1|2, this, handleCloseAlertResult);
 				else
 					removePanel();
 			}
