--- a/WeaveUI/src/weave/ui/NewUserWizard.mxml
+++ b/WeaveUI/src/weave/ui/NewUserWizard.mxml
@@ -22,7 +22,7 @@
 <ui:WizardViewStack
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:ui="weave.ui.*"
-	label="Import Data to Weave"
+	label="{lang('Import Data to Weave')}"
 	width="440" height="460"
 	finishEnabled="false"
 	creationComplete="handleCreationComplete()" xmlns:editors="weave.ui.editors.*" xmlns:tools="weave.visualization.tools.*"
@@ -31,7 +31,7 @@
 	
 		<!--Image from http://www.iconeden.com/icon/milky-a-free-vector-iconset.html-->
 		<mx:HBox>
-		<mx:Label text="Load local file"/>
+		<mx:Label text="{lang('Load local file')}"/>
 		<ui:HelpComponent>
 			Accepts XLS,CSV or Text file. Data should be delimited (by commas or tabs, etc.). You can check if the data has been parsed correctly in the next step.
 		</ui:HelpComponent>			
@@ -48,7 +48,7 @@
 		</mx:HBox>-->
 		<mx:Label text="OR" fontWeight="bold" />
 		<mx:HBox>
-			<mx:Label text="Paste your data below"/>
+			<mx:Label text="{lang('Paste your data below')}"/>
 			<ui:HelpComponent>
 				Paste a delimited data set (delimited by commas or tabs, etc.). You can check if the data has been parsed correctly in the next step.
 			</ui:HelpComponent>
@@ -57,7 +57,7 @@
 	</mx:VBox>
 	<mx:VBox id="gridBox" width="100%" height="100%">
 		<mx:HBox width="100%">
-			<mx:Text text="Check your data!"/>
+			<mx:Text text="{lang('Check your data!')}"/>
 			<ui:HelpComponent>
 				<ui:htmlText>
 					<![CDATA[
@@ -72,18 +72,18 @@
 			</ui:HelpComponent>
 		</mx:HBox>
 		<mx:HBox visible="{(keyColumnSelector.dataProvider as ICollectionView).length != 0}">
-			<mx:Label text="Unique Identifier Column" />
-			<ui:CustomComboBox toolTip="This is the column which uniquely identifies each row in your dataset. If you prefer you can change it to a different column." selectedIndex="0" id="keyColumnSelector"/>
+			<mx:Label text="{lang('Unique Identifier Column')}" />
+			<ui:CustomComboBox toolTip="{lang('This is the column which uniquely identifies each row in your dataset. If you prefer you can change it to a different column.')}" selectedIndex="0" id="keyColumnSelector"/>
 		</mx:HBox>
 		<mx:HBox id="delimiterBox">
-			<mx:Label text="Delimiter: "/>
-			<ui:CustomComboBox id="delimiterSelector" toolTip="If there is a problem, try changing the delimiter (you can also type a different delimiter)." editable="true" dataProvider="['Comma','Space','Tab','Semi Colon']" keyUp="handleDelimiterChange(event)" change="handleDelimiterChange(event)"/>
+			<mx:Label text="{lang('Delimiter: ')}"/>
+			<ui:CustomComboBox id="delimiterSelector" toolTip="{lang('If there is a problem, try changing the delimiter (you can also type a different delimiter).')}" editable="true" dataProvider="['Comma','Space','Tab','Semi Colon']" keyUp="handleDelimiterChange(event)" change="handleDelimiterChange(event)"/>
 		</mx:HBox>
 		<mx:DataGrid id="grid" height="100%"/>
 		
 	</mx:VBox>
 	<mx:VBox id="visTools" width="100%">
-		<mx:Text text="Your data is now ready to be visualized!"/>
+		<mx:Text text="{lang('Your data is now ready to be visualized!')}"/>
 		<mx:Text text="* Click the image below to add a visual tool or"/>
 		<mx:HBox><mx:Text text="* Use the"/><mx:Text fontWeight="bold" text="'Tools'"/><mx:Text text=" menu to add more visual tools"/></mx:HBox>		
 		<mx:HBox><mx:Text text="* Click the"/><mx:Image source="@Embed(source= '/weave/resources/images/tinyWrench.png')"/><mx:Text text=" image in the visual tools to edit the dimensions."/></mx:HBox>
