--- a/WeaveUI/src/weave/ui/PrintPanel.mxml
+++ b/WeaveUI/src/weave/ui/PrintPanel.mxml
@@ -28,7 +28,7 @@
     xmlns:ui ="weave.ui.*"
     xmlns:mx="http://www.adobe.com/2006/mxml"
 	layout="absolute" 
-    title="Print / Export Image"
+    title="{lang('Print / Export Image')}"
     showCloseButton="true"
     close="handleClose(event)"
     borderAlpha="0.95"
@@ -67,12 +67,12 @@
 			}
 			catch (se:SecurityError)
 			{
-				reportError(se, "Unable to create screenshot due to lack of permissive policy file for embedded image. " + se.message);
+				reportError(se, lang("Unable to create screenshot due to lack of permissive policy file for embedded image. ") + se.message);
 			}
 			catch (e:Error)
 			{
 				trace(e.getStackTrace());
-				trace("ImageSnapshot.captureImage() failed, falling back to BitmapUtils.getPNGFromComponent()");
+				trace(lang("ImageSnapshot.captureImage() failed, falling back to BitmapUtils.getPNGFromComponent()"));
 				_imageSource = BitmapUtils.getPNGFromComponent(component);
 			}
 		}
@@ -163,7 +163,7 @@
 			
    		   	
 			var img:ImageSnapshot = ImageSnapshot.captureImage(printVbox);
-   			_fileSaver.save(img.data, "weave screenshot " + dateString + ".png");
+   			_fileSaver.save(img.data, lang("weave screenshot ") + dateString + ".png");
    			
    			//close popup after image is saved
    			PopUpManager.removePopUp(this);	
@@ -204,8 +204,8 @@
 	</mx:VBox>
 	
 	<mx:ControlBar horizontalAlign="center">
-		<mx:Button id="printButton" label="Print" click="handlePrintClick(event)"/>
-		<mx:Button id="saveButton" label="Save as Image" click="handleSaveAsImageClick(event)"/>
-		<mx:Button id="cancelButton" label="Cancel" click="PopUpManager.removePopUp(this)"/>
+		<mx:Button id="printButton" label="{lang('Print')}" click="handlePrintClick(event)"/>
+		<mx:Button id="saveButton" label="{lang('Save as Image')}" click="handleSaveAsImageClick(event)"/>
+		<mx:Button id="cancelButton" label="{lang('Cancel')}" click="PopUpManager.removePopUp(this)"/>
 	</mx:ControlBar>
 </mx:TitleWindow> 
