--- a/WeaveUI/src/weave/visualization/tools/BarChartTool.mxml
+++ b/WeaveUI/src/weave/visualization/tools/BarChartTool.mxml
@@ -83,7 +83,7 @@
 			
 			override public function getSelectableAttributeNames():Array
 			{
-				return ["Height", "Sort", "Color"];
+				return [ lang("Height"), lang("Sort"), lang("Color")];
 			}
 			override public function getSelectableAttributes():Array
 			{
@@ -105,7 +105,7 @@
 			
 			private function alphaSliderFormatFunction(item:Number):String {
             	//return int(100 - (item * 100)) + "% Transparent";
-            	return int((item * 100)) + "% Opaque" + "\n" + int(100 - (item * 100)) + "% Transparent";
+            	return int((item * 100)) + lang("% Opaque") + "\n" + int(100 - (item * 100)) + lang("% Transparent");
             }
 			
 		]]>
@@ -114,7 +114,7 @@
 
 	<ui:ControlPanel>
 			<mx:Panel id="VizControlsPanel" 
-					label="Visualization Controls" 
+					label="{lang('Visualization Controls')}" 
 					headerHeight="2"
 					borderColor="0x000000" 
 					backgroundColor="0xCCCCCC" 
@@ -129,9 +129,9 @@
 					<mx:VBox width="100%" 
 							id="barChartControls">
 						<mx:HBox borderStyle="inset" width="100%">
-							<mx:Label text="Bar Opacity:" 
+							<mx:Label text="{lang('Bar Opacity:')}" 
 									color="0x000000" fontSize="12" 
-									toolTip="Use this control to see how transparent bars are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency)."/>
+									toolTip="{lang('Use this control to see how transparent bars are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency).')}"/>
 						
 							<mx:HSlider id="alphaSlider" 
 										width="100%" 
@@ -141,7 +141,7 @@
 										liveDragging="true"/>
 						</mx:HBox>
 						<mx:CheckBox id="linkSortingToHeightCheck" fontSize="12" label="Sort"
-									 toolTip="Link the column used for sorting the bar order to the column used to set the height of the bars.  Checking this will make it so that if you change the bar height attribute, the bars will be sorted to match this column.  Unchecking this unlink these columns so the sorting can be set separately, but will still be sorted by the previous height column until set otherwise."/>
+									 toolTip="{lang('Link the column used for sorting the bar order to the column used to set the height of the bars.  Checking this will make it so that if you change the bar height attribute, the bars will be sorted to match this column.  Unchecking this unlink these columns so the sorting can be set separately, but will still be sorted by the previous height column until set otherwise."/>
 						<ui:DynamicColumnComponent visTool="{this}" label="height" creationComplete="event.target.dynamicObject = _plotter.yBarEnd"/>
 						<ui:DynamicColumnComponent visTool="{this}" label="sort" creationComplete="event.target.dynamicObject = _plotter.sortColumn"/>
 						<ui:DynamicColumnComponent visTool="{this}" label="color" creationComplete="event.target.dynamicObject = colorColumn"/>
